--- a/index.html
+++ b/index.html
@@ -1,191 +1,287 @@
 <!DOCTYPE html>
-<head>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+<html lang="en">
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="initial-scale=1.0, width=device-width" />    
+    <title>Interactive Map</title>
+    <script type="text/javascript" src="d3.min.js"></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Yanone+Kaffeesatz:200" rel="stylesheet">
+    <style>
 
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      font-family: "Open Sans", sans-serif;
-      flex-direction: column;
-    }
-    .state {
-      stroke-width: 1;
-      stroke: #ffffff;
-    }
+      body {
+        margin: 0;
+        background-color: #333333;
+        font-family: 'Yanone Kaffeesatz', sans-serif;
+        font-weight: 200;
+        font-size: 17px;
+        width: 1290px;
+        
+      }
+      #map-holder {
+        width: 100vw;
+        height: 100vh;
+      }
+      svg rect {
+        fill: #2A2C39;   /* map background colour */
+      }
+      .country{
+        fill: #d0d0d0;   /* country colour */
+        stroke: #2A2C39; /* country border colour */
+        stroke-width: 1; /* country border width */
+      }
+      .country-on{
+        fill: #4B5358;   /* highlight colour for selected country */
+      }
+      .countryLabel{
+        display: none;   /* hide all country labels by default */
+      }
+      .countryName{
+        fill: #FFFAFF;   /* country label text colour */
+      }
+      .countryLabelBg{
+        fill: #F68521;   /* country label background colour */
+      }
+    </style>
+  </head>
 
-    div.tooltip {
-      position: absolute;
-      text-align: center;
-      width: 60px;
-      min-height: 28px;
-      padding: 8px 12px;
-      font: 12px sans-serif;
-      background: lightgray;
-      border: 0px;
-      border-radius: 8px;
-      pointer-events: none;
-    }
-  </style>
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="https://d3js.org/topojson.v2.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.1/tinycolor.js"></script>
-  <title></title>
-</head>
-<body>
-<h2>Unemployment rates in the United States, 2020</h2>
-<div class="home"></div>
-</body>
-<script>
+  <body>
+    <div id="map-holder"></div>
+    <script type="text/javascript">
+    
+      // DEFINE VARIABLES
+      // Define size of map group
+      // Full world map is 2:1 ratio
+      // Using 12:5 because we will crop top and bottom of map
+      w = 3000;
+      h = 1250;
+      // variables for catching min and max zoom factors
+      var minZoom;
+      var maxZoom;
 
-    Number.prototype.round = function (decimals) {
-        return Number((Math.round(this + "e" + decimals) + "e-" + decimals));
-    };
+      // DEFINE FUNCTIONS/OBJECTS
+      // Define map projection
+      var projection = d3
+        .geoEquirectangular()
+        .center([0, 15]) // set centre to further North as we are cropping more off bottom of map
+        .scale([w / (2 * Math.PI)]) // scale to fit group width
+        .translate([w / 2, h / 2]) // ensure centred in group
+      ;
 
-    function selectDivisionNumber(array) {
-        let arraySize = array.length,
-            halfArray = Math.round(arraySize / 2);
-        let newArr = [];
-        //Take first and last item and push them to the array
-        newArr.push(array[0])
-        newArr.push(array[arraySize - 1]);
-        //Don't mind the order, they will be sorted later.
+      // Define map path
+      var path = d3
+        .geoPath()
+        .projection(projection)
+      ;
 
-        //Divide the array in two
-        let firstHalf = array.slice(0, halfArray);
-        let firstHalfSelection = firstHalf[Math.round(firstHalf.length / 2)];
-        newArr.push(firstHalfSelection);
+      // Create function to apply zoom to countriesGroup
+      function zoomed() {
+        t = d3
+          .event
+          .transform
+        ;
+        countriesGroup
+          .attr("transform","translate(" + [t.x, t.y] + ")scale(" + t.k + ")")
+        ;
+      }
 
-        let secondHalf = array.slice(halfArray, arraySize);
-        let secondHalfSelection = secondHalf[Math.round(secondHalf.length / 2)];
-        newArr.push(secondHalfSelection);
-        return newArr;
-    }
+      // Define map zoom behaviour
+      var zoom = d3
+        .zoom()
+        .on("zoom", zoomed)
+      ;
 
-</script>
-<script>
-    let fetchData = async () => {
-        //I've handily uploaded the data to this site for easy reference.
-        let url = "https://api.myjson.com/bins/cgbm8";
-        //'fetch()' returns a promise
-        let response= await fetch(url);
-        //'json()' also returns a promise
-        return response.json();
-    };
+      function getTextBox(selection) {
+        selection
+          .each(function(d) {
+            d.bbox = this
+              .getBBox();
+            })
+        ;
+      }
 
-    const width = 900;
-    const height = 600;
+      // Function that calculates zoom/pan limits and sets zoom to default value 
+      function initiateZoom() {
+        // Define a "minzoom" whereby the "Countries" is as small possible without leaving white space at top/bottom or sides
+        minZoom = Math.max($("#map-holder").width() / w, $("#map-holder").height() / h);
+        // set max zoom to a suitable factor of this value
+        maxZoom = 20 * minZoom;
+        // set extent of zoom to chosen values
+        // set translate extent so that panning can't cause map to move out of viewport
+        zoom
+          .scaleExtent([minZoom, maxZoom])
+          .translateExtent([[0, 0], [w, h]])
+        ;
+        // define X and Y offset for centre of map to be shown in centre of holder
+        midX = ($("#map-holder").width() - minZoom * w) / 2;
+        midY = ($("#map-holder").height() - minZoom * h) / 2;
+        // change zoom transform to min zoom and centre offsets
+        svg.call(zoom.transform, d3.zoomIdentity.translate(midX, midY).scale(minZoom));
+      }
 
-    const svg = d3.select(".home").append("svg")
-        .attr("width", width)
-        .attr("height", height);
+      // zoom to show a bounding box, with optional additional padding as percentage of box size
+      function boxZoom(box, centroid, paddingPerc) {
+        minXY = box[0];
+        maxXY = box[1];
+        // find size of map area defined
+        zoomWidth = Math.abs(minXY[0] - maxXY[0]);
+        zoomHeight = Math.abs(minXY[1] - maxXY[1]);
+        // find midpoint of map area defined
+        zoomMidX = centroid[0];
+        zoomMidY = centroid[1];
+        // increase map area to include padding
+        zoomWidth = zoomWidth * (1 + paddingPerc / 100);
+        zoomHeight = zoomHeight * (1 + paddingPerc / 100);
+        // find scale required for area to fill svg
+        maxXscale = $("svg").width() / zoomWidth;
+        maxYscale = $("svg").height() / zoomHeight;
+        zoomScale = Math.min(maxXscale, maxYscale);
+        // handle some edge cases
+        // limit to max zoom (handles tiny countries)
+        zoomScale = Math.min(zoomScale, maxZoom);
+        // limit to min zoom (handles large countries and countries that span the date line)
+        zoomScale = Math.max(zoomScale, minZoom);
+        // Find screen pixel equivalent once scaled
+        offsetX = zoomScale * zoomMidX;
+        offsetY = zoomScale * zoomMidY;
+        // Find offset to centre, making sure no gap at left or top of holder
+        dleft = Math.min(0, $("svg").width() / 2 - offsetX);
+        dtop = Math.min(0, $("svg").height() / 2 - offsetY);
+        // Make sure no gap at bottom or right of holder
+        dleft = Math.max($("svg").width() - w * zoomScale, dleft);
+        dtop = Math.max($("svg").height() - h * zoomScale, dtop);
+        // set zoom
+        svg
+          .transition()
+          .duration(500)
+          .call(
+            zoom.transform,
+            d3.zoomIdentity.translate(dleft, dtop).scale(zoomScale)
+          );
+      }
 
-    const projection = d3.geoAlbersUsa()
-        .translate([width / 2, height / 2])    // translate to center of screen
-        .scale([1000]);          // scale things down so see entire US
 
-    const path = d3.geoPath().projection(projection);
 
-    fetchData().then(response => {
 
-        const tooltip = d3.select(".home").append("div")
-            .attr("class", "tooltip")
-            .style("opacity", 0);
+      // on window resize
+      $(window).resize(function() {
+        // Resize SVG
+        svg
+          .attr("width", $("#map-holder").width())
+          .attr("height", $("#map-holder").height())
+        ;
+        initiateZoom();
+      });
 
-        let sampleMap = response.data.map(item => {
-            return Number(item.unemploymentRate);
-        });
-        let domain = selectDivisionNumber(sampleMap).sort();
+      // create an SVG
+      var svg = d3
+        .select("#map-holder")
+        .append("svg")
+        // set to the same size as the "map-holder" div
+        .attr("width", $("#map-holder").width())
+        .attr("height", $("#map-holder").height())
+        // add zoom functionality
+        .call(zoom)
+      ;
 
-        //To help generate the scale, https://hihayk.github.io/scale/
-        const colorScale = d3.scaleLinear()
-            .domain(domain)
-            .range(["#00806D", "#00BC4C", "#00F200", "#85FB44"].reverse());
 
-        d3.json("https://gist.githubusercontent.com/Bradleykingz/3aa5206b6819a3c38b5d73cb814ed470/raw/a476b9098ba0244718b496697c5b350460d32f99/us-states.json", function (error, uState) {
-            if (error) throw error;
-            _(uState.features)
-                .keyBy('properties.name')
-                .merge(_.keyBy(response.data, 'State'))
-                .values()
-                .value();
+      // get map data
+      d3.json(
+        "custom50.json",
+        function(json) {
+          //Bind data and create one path per GeoJSON feature
+          countriesGroup = svg.append("g").attr("id", "map");
+          // add a background rectangle
+          countriesGroup
+            .append("rect")
+            .attr("x", 0)
+            .attr("y", 0)
+            .attr("width", w)
+            .attr("height", h);
 
-            svg.selectAll('path')
-                .data(uState.features)
-                .enter()
-                .append('path')
-                .attr("d", path)
-                .style('transition', "all 0.2s ease-in-out")
-                .attr('class', 'state')
-                .style('fill', function (d, i) {
-                    let uRate = d.unemploymentRate;
-                    return uRate ? colorScale(uRate) : "#ccc";
-                })
-                .on('mousemove', function (d) {
-                    tooltip.transition()
-                        .duration(200)
-                        .style("opacity", .9);
-
-                    tooltip.style("left", (d3.event.pageX) + "px")
-                        .style("top", (d3.event.pageY) + "px")
-                        .text(()=> `${d.State}: ${(d.unemploymentRate*100).round(2).toFixed(1)}%`)
-                })
-                .on("mouseover", function (d) {
-                    d3.select(this)
-                        .style("fill", tinycolor(colorScale(d.unemploymentRate)).darken(15).toString())
-                        .style("cursor", "pointer");
-
-                })
-                .on("mouseout", function (d, i) {
-                    d3.select(this).style("fill", function () {
-                        let uRate = d.unemploymentRate;
-                        return uRate ? colorScale(uRate) : "#ccc";
-                    });
-
-                    tooltip.transition()
-                        .duration(500)
-                        .style("opacity", 0);
-                });
-
-            //create a new SVG in the body
-            const legend = d3.select(".home").append('svg')
-            //add it with the '.legend' class
-                .attr('class', 'legend')
-                //it should be 14px wide
-                .attr('width', 148)
-                //and 148px high
-                .attr('height', 148)
-                //then either select all the 'g's inside the svg
-                //or create placeholders
-                .selectAll('g')
-                //Fill the data into our placeholders in reverse order
-                //This arranges our legend in descending order.
-                //The 'data' here is the items we entered in the 'domain',
-                //in this case [min, max]
-                .data(colorScale.domain().slice().reverse())
-                //Every node in teh data should have a 'g' appended
-                .enter().append('g')
-                //the 'g' should have this attribute
-                .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
-            //Inside every 'legend', insert a rect
-            legend.append("rect")
-                //that's 18px wide
-                .attr("width", 18)
-                //and 18px high
-                .attr("height", 18)
-                //then fill it will the color assigned by the scale
-                .style("fill", colorScale);
-
-            legend.append("text")
-                .attr("x", 24)
-                .attr("y", 9)
-                .attr("dy", ".35em")
-                .text(function(d) { return `${(d*100).round(2).toFixed(1)}%`});
-
-        });
-    });
-
-</script>
+          // draw a path for each feature/country
+          countries = countriesGroup
+            .selectAll("path")
+            .data(json.features)
+            .enter()
+            .append("path")
+            .attr("d", path)
+            .attr("id", function(d, i) {
+              return "country" + d.properties.iso_a3;
+            })
+            .attr("class", "country")
+      //      .attr("stroke-width", 10)
+      //      .attr("stroke", "#ff0000")
+            // add a mouseover action to show name label for feature/country
+            .on("mouseover", function(d, i) {
+                d3.select("#countryLabel" + d.properties.iso_a3).style("display", "block");
+            })
+            .on("mouseout", function(d, i) {
+                d3.select("#countryLabel" + d.properties.iso_a3).style("display", "none");
+            })
+            // add an onclick action to zoom into clicked country
+            .on("click", function(d, i) {
+                d3.selectAll(".country").classed("country-on", false);
+                d3.select(this).classed("country-on", true);
+            boxZoom(path.bounds(d), path.centroid(d), 20);
+            });
+          // Add a label group to each feature/country. This will contain the country name and a background rectangle
+          // Use CSS to have class "countryLabel" initially hidden
+          countryLabels = countriesGroup
+            .selectAll("g")
+            .data(json.features)
+            .enter()
+            .append("g")
+            .attr("class", "countryLabel")
+            .attr("id", function(d) {
+              return "countryLabel" + d.properties.iso_a3;
+            })
+            .attr("transform", function(d) {
+              return (
+                "translate(" + path.centroid(d)[0] + "," + path.centroid(d)[1] + ")"
+              );
+            })
+            // add mouseover functionality to the label
+            .on("mouseover", function(d, i) {
+                d3.select(this).style("display", "block");
+            })
+            .on("mouseout", function(d, i) {
+                 d3.select(this).style("display", "none");
+           })
+            // add an onlcick action to zoom into clicked country
+            .on("click", function(d, i) {
+                d3.selectAll(".country").classed("country-on", false);
+                d3.select("#country" + d.properties.iso_a3).classed("country-on", true);
+              boxZoom(path.bounds(d), path.centroid(d), 20);
+            });
+          // add the text to the label group showing country name
+          countryLabels
+            .append("text")
+            .attr("class", "countryName")
+            .style("text-anchor", "middle")
+            .attr("dx", 0)
+            .attr("dy", 0)
+            .text(function(d) {
+              return d.properties.name;
+            })
+            .call(getTextBox);
+          // add a background rectangle the same size as the text
+          countryLabels
+            .insert("rect", "text")
+            .attr("class", "countryLabelBg")
+            .attr("transform", function(d) {
+              return "translate(" + (d.bbox.x - 2) + "," + d.bbox.y + ")";
+            })
+            .attr("width", function(d) {
+              return d.bbox.width + 4;
+            })
+            .attr("height", function(d) {
+              return d.bbox.height;
+            });
+          initiateZoom();
+        }
+      );
+ 
+    </script>
+  </body>
+</html>
